--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -101,7 +101,7 @@ h1.page_title {
 }
 
 .catalog__map_fullscreen .link_route {
-    left: calc((50% - var(--container-max-width) / 2) + 210px);
+    left: calc((50% - var(--container-max-width) / 2) + 265px);
     position: absolute;
     top: 2rem;
     border: none;
@@ -141,6 +141,14 @@ h1.page_title {
 
 }
 
+@media (max-width: 1650px) {
+    .catalog__map_fullscreen .link_route {
+        left: calc((50% - var(--container-max-width) / 2) + 220px);
+        position: absolute;
+        top: 2rem;
+        border: none;
+    }
+}
 
 @media (max-width: 1024px) {
     .catalog__map-sticky {
