--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -396,7 +396,7 @@ samp {
 }
 
 pre {
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 address {
@@ -4967,7 +4967,6 @@ img.lazy.loaded {
     --header-text-font-size-3: 1.5rem;
   }
 
-
   .main {
     /*padding-top: 28px;*/
   }
@@ -5199,4 +5198,17 @@ img.lazy.loaded {
     padding-right: 4rem;
     padding-right: var(--container-gap);
   }
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-black-50);
+  z-index: 9999;
 }
