fix | Б24 виджет, отправка письма, стили

--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -179,6 +179,10 @@ a:not([class]):hover {
   color: var(--color-orange);
 }
 
+.notifications-widget-root a:not([class]) {
+  border: none;
+}
+
 a svg,
 a use {
   pointer-events: none;
